--- a/7.md
+++ b/7.md
@@ -16,14 +16,14 @@ map.foo = 'bar';
 + 对于`Map`集合来说，如果属性值是假值，则在要求使用布尔值的情况下会被自动转换为`false`。
 ### ES6中的Set集合
 将对象存储在Set的实例与存储在变量中完全一样，只要`Set`实例中的引用存在，垃圾回收机制就不能释放该对象的内存空间。可以将`Set`类型看作一个强引用的`Set`集合。
-**创建**：`new Set()`
-**使用数组初始化**：`new Set([1,2,3])`
-**添加**：`Set.prototype.add()`
-**检测元素是否存在**：`has()`
-**移除**：
-  `delete()`删除一个
-	`clear()`删除所有
-**长度属性**：`size`
+**创建**：`new Set()`  
+**使用数组初始化**：`new Set([1,2,3])`  
+**添加**：`Set.prototype.add()`  
+**检测元素是否存在**：`has()`  
+**移除**：  
+  `delete()`删除一个  
+  `clear()`删除所有  
+**长度属性**：`size`  
 `forEach()`的回调函数接收以下3个参数：
 
 + Set集合中下一次索引的位置
@@ -42,12 +42,20 @@ map.foo = 'bar';
 + 不暴露任何迭代器
 + 不支持`forEach()` 
 + 不支持`size`属性
-### Map集合:可以支持对象作为属性键名
-`has(key)`:检索
-`set(key,value)`：设置属性
-`get(key)`：获取属性
-`delete(key)`：移除键名及其对应的值
-`clear()`：移除所有键值对
+### Map集合：一种储存着许多键值对的有序列表，其中键名和对应的值支持所有的数据类型。键名的等价性判断是通过`Object.is()`实现的。因此5和"5"会被判断为两种类型。Map可以支持对象作为属性键名
+**初始化**：
+
+ + `let map = new Map();`
+ `map.set("name") = "wxl";`
+ 
+ + `new Map([["name","wxl"],["age",20])`
+ 
+**方法**：  
+`has(key)`:检索  
+`set(key,value)`：设置属性  
+`get(key)`：获取属性  
+`delete(key)`：移除键名及其对应的值  
+`clear()`：移除所有键值对  
 
 forEach方法回调函数接受3个参数：
 
@@ -97,6 +105,4 @@ let Person = (function(){
   
   return Person;
 }());
-
-console.log(new Person());
 ```
