--- a/高程笔记/五、引用类型.md
+++ b/高程笔记/五、引用类型.md
@@ -67,15 +67,15 @@
 	`队列`:`先进先出`的数据结构。在列表的末位添加项，从列表的前端移除项。
 <br>
 	模拟队列：使用`push()`和`shift()`
-	反向模拟队列：使用`unshift()`和`shift()`	
+	反向模拟队列：使用`unshift()`和`pop()`	
 <br>
 	方法：
 	+ `shift()`:移除数组的第一项并返回该元素。
 	+ `unshift()`:在数组的前端添加任意个项并返回新元素长度。
 <br>
 + 重排序
-	+ `reverse()`：反转数组项的书序
-	+ `sort()`:将数组元素进行排序，默认比较每个数组项的字符串编码进行升序排序。可以传入比较函数作为参数，比较函数接受两个参数，如果第一个参数应该位于第二个参数之前，返回负数。如果二者相等，返回0，如果第一根参数应该位于第二个参数之后，返回正数。
+	+ `reverse()`：反转数组项的顺序
+	+ `sort()`:将数组元素进行排序，默认比较每个数组项的字符串编码进行升序排序。可以传入比较函数作为参数，比较函数接受两个参数，如果第一个参数应该位于第二个参数之前，返回负数。如果二者相等，返回0，如果第一个参数应该位于第二个参数之后，返回正数。
 <br>
 + 操作
 	+ `concat()`
@@ -87,20 +87,22 @@
 		+ 参数：传递要返回项的起始位置和结束位置，返回数组指定位置中间的项——不包含结束位置的项。如果参数是负数，则用数组长度加上该数来确定相应位置。
 <br>
 	+ `splice()`
+		+ 参数：（起始位置，删除个数，替换项）
 		功能：主要是向数组中插入项
 		+ 删除：只传入前两个参数
 		+ 插入：提供三个参数：起始位置，0，和插入项
 		+ 替换：提供三个参数：起始位置，删除个数 和 插入项
-		+ 参数：（起始位置，删除个数，替换项）
+
 <br>
-+ 位置
-	+  方法：
+
++ 位置  
+	+ 方法：
 		+ `indexOf()`：从数组的开头查找指定项的位置
 		+ `lastIndexOf()`：从数组的末尾查找指定项的位置
-
 	+ **功能**：这两个方法都返回要查找项在数组中的位置，如果找不到则返回`-1`。
 	+ **参数**：这两个方法接收同样的参数，`查找项`和`起始位置`
 	<br>
+
 + 迭代
 	+ 参数：这5个方法均接受两个参数，要在每一项上运行的函数和运行该函数的作用域。
 	+ `every()`
@@ -128,10 +130,10 @@
 ### 	5.3 `Date`类型
 + ***创建***： 使用`new`和`Date`构造函数
 	1. 不传入参数时，自动返回当前时间
-	2. 传入时间戳，为了简化方法，引入了`Date.parse()`和`Date.UTC()`方法，二者均返回时间戳。`Date.parse()`接受`日期格式字符串`作为参数，`Date.UTC()`接受`年份，基于0的月份，天数(1-31),小时数(0-30),分钟，秒数及毫秒数`作为参数。给`Date`构造函数传入参数时，根据参数格式不同自动调用这两个方法，返回当前时间毫秒数再进行构造。
+	2. 传入时间戳，为了简化方法，引入了`Date.parse()`和`Date.UTC()`方法，二者均返回时间戳。`Date.parse()`接受`日期格式字符串`作为参数，`Date.UTC()`接受`年份，基于0的月份，天数(1-31),小时数(0-23),分钟，秒数及毫秒数`作为参数。给`Date`构造函数传入参数时，根据参数格式不同自动调用这两个方法，返回当前时间毫秒数再进行构造。
 <br>
 + ***其他***
-	+ `Date.now`:返回当前的日期和时间的毫秒数，也可以使用`+ new Date()`,第二种方法兼容性更好。
+	+ `Date.now()`:返回当前的日期和时间的毫秒数，也可以使用`+ new Date()`,第二种方法兼容性更好。
 <br>
 
 + ***日期格式化***
@@ -143,7 +145,7 @@
 ### 5.4 `RegExp`类型
 #### 基本概念
 **模式(`pattern`)**：可以是任何简单或复杂的正则表达式，可以包含字符类、限定符、分组、向前查找以及反向引用。
-***表示(`flags`)***：标明正则表达式的行为。有以下`3`种
+***标志(`flags`)***：标明正则表达式的行为。有以下`3`种
 + `g`：全局模式，即模式将应用于所有字符串
 + `i`：匹配时忽略大小写
 + `m`：表示多行模式，在到达一行末尾时会继续查找下一行。
