--- a/高程笔记/四、变量、作用域和内存问题.md
+++ b/高程笔记/四、变量、作用域和内存问题.md
@@ -46,7 +46,7 @@
      
  ***变量对象***：每个执行环境都有与之相关的变量对象，环境中定义的所有变量和函数都保存在这个对象中。
  
- ***作用域链***：代码在环境中执行的时候，会创建变量对象的作用域链，保证对执行环境有全局访问的所有变量和函数的有序访问。
+ ***作用域链***：代码在环境中执行的时候，会创建变量对象的作用域链，保证对执行环境有权访问的所有变量和函数的有序访问。
 
 ```sequence
 participant 执行环境
