--- a/docs/深入理解ES6/1-4.md
+++ b/docs/深入理解ES6/1-4.md
@@ -1,203 +1,267 @@
-#### 正则表达式y修饰符
-作用：影响正则表达式搜索过程中的sticky属性，它会通知搜索从正则表达式的lastIndex属性开始进行。如果在指定位置没能匹配成功，则停止继续匹配。
-当执行操作时，y操作符会将上次匹配后面一个字符的索引保存在lastIndex中，如果操作匹配结果为空，则lastIndex被重置为0。g操作符也是如此。
+# 正则表达式
+
+## 正则表达式 y 修饰符
+
+作用：影响正则表达式搜索过程中的 sticky 属性，它会通知搜索从正则表达式的 lastIndex 属性开始进行。如果在指定位置没能匹配成功，则停止继续匹配。
+当执行操作时，y 操作符会将上次匹配后面一个字符的索引保存在 lastIndex 中，如果操作匹配结果为空，则 lastIndex 被重置为 0。g 操作符也是如此。
 
     let text="hello1 hello2 hello3";
     let globalPattern = /hello\d\s?/g;
-    let globalResult = globalPattern.exec(text); 
+    let globalResult = globalPattern.exec(text);
     >["hello1 ", index: 0, input: "hello1 hello2 hello3"]
-    
+
     let stickyPattern = /hello\d\s/y;
     let stickyResult = stickyPattern.exec(text)
-    >["hello1 ", index: 0, input: "hello1 hello2 hello3"] 
-    
-    globalPattern.lastIndex=1;
-	stickyPattern.lastIndex=1;
-	
-	globalResult=globalPattern.exec(text);
-	>["hello2 ", index: 7, input: "hello1 hello2 hello3"]
-	stickyResult = stickyPattern.exec(text)
-	>null
-注意：首先，只有调用 `eval()` 和 `test()` 方法时，才会涉及`lastIndex`属性。其次，对于粘滞正则表达式，如果使用^来匹配开端，当`lastIndex`值为0时，是否使用y修饰符无差别。如果此时`lastIndex`不为0，则表达式永远不会匹配到正确结果。
+    >["hello1 ", index: 0, input: "hello1 hello2 hello3"]
 
-##### 检测y修饰符是否存在：通过属性名，检查sticky属性.
-    
+    globalPattern.lastIndex=1;
+    stickyPattern.lastIndex=1;
+
+    globalResult=globalPattern.exec(text);
+    >["hello2 ", index: 7, input: "hello1 hello2 hello3"]
+    stickyResult = stickyPattern.exec(text)
+    >null
+
+注意：首先，只有调用 `eval()` 和 `test()` 方法时，才会涉及`lastIndex`属性。其次，对于粘滞正则表达式，如果使用^来匹配开端，当`lastIndex`值为 0 时，是否使用 y 修饰符无差别。如果此时`lastIndex`不为 0，则表达式永远不会匹配到正确结果。
+
+### 检测 y 修饰符是否存在
+
+方法：通过属性名，检查 sticky 属性
+
     let pattern = /hello\d/y;
     pattern.sticky;                    //true
-##### 检测浏览器引擎是否支持修饰符
+
+#### 检测浏览器引擎是否支持修饰符
 
     function hasRegExpY(){
-	    try{
-		    var pattern = new RegExp('.','y');
-		    return true;
-	    } catch(e){
-		    return false;
-	    }
-	}
+        try{
+    	    var pattern = new RegExp('.','y');
+    	    return true;
+        } catch(e){
+    	    return false;
+        }
+    }
+
 #### 正则表达式的复制
-使用`new RegExp()`复制时：es6可以接受包括修饰符在内的两个参数，并使用新参数替代旧修饰符，es5则会报错。
+
+使用`new RegExp()`复制时：es6 可以接受包括修饰符在内的两个参数，并使用新参数替代旧修饰符，es5 则会报错。
+
 #### 属性
+
 `flags`属性:获取正则表达式修饰符
 `source`属性：获取正则表达式文本
+
 ### 模板字面量
+
 #### 多行字符串
-es6方法：反撇号包裹，直接代码中换行，显示使用`\n`
+
+es6 方法：反撇号包裹，直接代码中换行，显示使用`\n`
+
 ##### 字符串占位符
-任何合法的JavaScript表达式嵌入到占位符中并将其作为字符串中的一部分输出到结果中。
+
+任何合法的 JavaScript 表达式嵌入到占位符中并将其作为字符串中的一部分输出到结果中。
+
 #### 标签模板
-标签可以是一个函数，第一个参数是一个数组，包括JavaScript解释过后的字面量字符串，之后的每个参数都是每一个占位符的解释值。
+
+标签可以是一个函数，第一个参数是一个数组，包括 JavaScript 解释过后的字面量字符串，之后的每个参数都是每一个占位符的解释值。
 
     function passthru(literals, ...substitutions){
-		let result = '';
-		for(let i =0;i < substitutions.length;i++){
-		  	result += literals[i]+'aaaaa';
-		    result += substitutions[i];
-		}
-	    result += literals[literals.length -1];
-	  
-	    return result;
-	}
+      let result = '';
+    	for(let i =0;i < substitutions.length;i++){
+    	  	result += literals[i]+'aaaaa';
+    	    result += substitutions[i];
+    	}
+        result += literals[literals.length -1];
+
+        return result;
+    }
 
     let count = 10,
-	price = 0.25,
+    price = 0.25,
     message = passthru`${count} items cost $${(count*price).toFixed(2)}`
-    >10 items cost $2.50 
+    >10 items cost $2.50
+
 ##### 在模板字面量中使用原始值
+
 访问字符转移被转换成等价字符前的原始字符串：`String.raw()`。
 标签函数的第一个参数有一个额外的属性`raw`，是一个包含每一个字面值的原生等价信息的数组。
 
-    
     let message1 = `Multiline\n string`,
-	message2 = String.raw`Multiline\n string`;
-	
-	message1;    //Multiline
-				 //string
-	message2;    //Multiline\n string
+    message2 = String.raw`Multiline\n string`;
+
+    message1;    //Multiline
+    			 //string
+    message2;    //Multiline\n string
+
 ## 函数
+
 ### 形参默认值
+
 es5：
 
-	function makeRequest(timeout){
-		timeout = timeout || 2000;	
-	}
-上述形式导致的问题：timeout 传入值为0不生效
-解决：在es5环境下，使用typeof检查参数类型是否为`undefined`是更安全的选择。
+    function makeRequest(timeout){
+    	timeout = timeout || 2000;
+    }
+
+上述形式导致的问题：timeout 传入值为 0 不生效
+解决：在 es5 环境下，使用 typeof 检查参数类型是否为`undefined`是更安全的选择。
 es6:
 
-	function makeRequest(timeout = 2000){
-	}
-#### 默认参数值对arguments对象的影响
-es5非严格模式下，命名参数的变化会被同步到`arguments`对象中。严格模式取消了这样的模式。
-es6中：`arguments`对象的行为保持与es5严格模式保持一致。默认参数值得存在使得`arguments`对象保持与命名参数分离
+    function makeRequest(timeout = 2000){
+    }
+
+#### 默认参数值对 arguments 对象的影响
+
+es5 非严格模式下，命名参数的变化会被同步到`arguments`对象中。严格模式取消了这样的模式。
+es6 中：`arguments`对象的行为保持与 es5 严格模式保持一致。默认参数值得存在使得`arguments`对象保持与命名参数分离
+
 #### 不定参数
+
 作用：指定多个独立参数，并通过整合后的数组来访问。
-##### es6中不定参数的写法：...
+
+##### es6 中不定参数的写法：...
 
 ##### 使用限制：
-+	不定参数后不能有其他命名参数
-+	不定参数不能用于对象字面量setter中，原因：对象字面量setter的参数有且只有一个。即以下报错：
-	  
-		  let object = {
-			  //不可再setter中使用不定参数
-			  set name(...value)
-		  }
 
-##### 对`arguments`对象的影响：无论是否使用不定参数，arguments对象总是包含所有传入函数的参数。
-### name属性
-name属性通常与函数名相同。
+- 不定参数后不能有其他命名参数
+- 不定参数不能用于对象字面量 setter 中，原因：对象字面量 setter 的参数有且只有一个。即以下报错：
+  let object = {
+  //不可再 setter 中使用不定参数
+  set name(...value)
+  }
+
+##### 对`arguments`对象的影响：无论是否使用不定参数，arguments 对象总是包含所有传入函数的参数。
+
+### name 属性
+
+name 属性通常与函数名相同。
+
 #### 特殊情况
-+ 通过`bind`创建的函数，其名称带有"bound"前缀
-+ 通过Function 构造函数创建的函数，其名称带有"anonymous"前缀
+
+- 通过`bind`创建的函数，其名称带有"bound"前缀
+- 通过 Function 构造函数创建的函数，其名称带有"anonymous"前缀
+
 ### 函数的多种用途
-两个内部方法：`[[Call]]`和`[[Constructor]]`，使用`new`关键字调用函数时，执行`[[Constructor]]`，负责创建一个被称作实例的新对象，然后执行函数体，将this绑定到实例上。如果不通过`new`调用，则执行`[[Call]]`函数。
-#### 元属性new.target
+
+两个内部方法：`[[Call]]`和`[[Constructor]]`，使用`new`关键字调用函数时，执行`[[Constructor]]`，负责创建一个被称作实例的新对象，然后执行函数体，将 this 绑定到实例上。如果不通过`new`调用，则执行`[[Call]]`函数。
+
+#### 元属性 new.target
+
 作用：判断函数是否通过`new`关键字调用
-    
-    function Person(name){
-	  if(typeof new.target !=='undefined'){
-  		this.name = name;
-	  }else{
-	  	throw new Error('必须通过new调用');
-	  }
-	}
-	
-	let person = new Person('wxl');
-	let notPerson = Person.call(person,'michael');
-	console.log(person);
-	console.log(notPerson);  //报错
+
+function Person(name){
+if(typeof new.target !=='undefined'){
+this.name = name;
+}else{
+throw new Error('必须通过 new 调用');
+}
+}
+let person = new Person('wxl');
+let notPerson = Person.call(person,'michael');
+console.log(person);
+console.log(notPerson); //报错
+
 #### 块级函数
-ES6严格模式下，在定义函数的代码块内，块级函数会被提升至顶部。非严格模式下，函数被提升至外围函数或全局作用域的顶部。
+
+ES6 严格模式下，在定义函数的代码块内，块级函数会被提升至顶部。非严格模式下，函数被提升至外围函数或全局作用域的顶部。
+
 ### 箭头函数
+
 设计目标：替代匿名函数表达式
 与普通函数的区别：
 
-+ 沒有this 、super、arguments和 new.target绑定（这些值将由外围一层非箭头函数决定）
-+ 不能`new`调用
-+ 没有原型
-+ 不可改变this绑定
-+ 不支持`arguments`对象
-+ 不支持重复的命名参数
+- 沒有 this 、super、arguments 和 new.target 绑定（这些值将由外围一层非箭头函数决定）
+- 不能`new`调用
+- 没有原型
+- 不可改变 this 绑定
+- 不支持`arguments`对象
+- 不支持重复的命名参数
 
-#### this绑定
-箭头函数中没有this绑定，必须通过查找作用域来决定其值。如果被非箭头函数包括，则`this`绑定的是最近一层非箭头函数的`this`，否则`this`的值被设置为`undefined`，不能通过`call()`、`apply()` 或 `bind()`方法来改变箭头函数的this值
-### ES6尾递归优化
-以下情况可优化：  
+#### this 绑定
+
+箭头函数中没有 this 绑定，必须通过查找作用域来决定其值。如果被非箭头函数包括，则`this`绑定的是最近一层非箭头函数的`this`，否则`this`的值被设置为`undefined`，不能通过`call()`、`apply()` 或 `bind()`方法来改变箭头函数的 this 值
+
+### ES6 尾递归优化
+
+以下情况可优化：
 
 - 尾递归函数不是闭包
 - 在函数内部，尾调用是最后一条语句
 - 尾调用的结果作为函数值返回
+
 ## 扩展对象的功能性
+
 ### 对象类别
-+ 普通对象：具有JavaScript对象所有默认内部行为 
-+ 特异对象：具有某些与默认行为不符的内部行为
-+ 标准对象：ECMAScript 6 规范中定义的对象
-+ 内建对象：脚本开始执行时存在于JavaScript环境中的对象，所有标准对象都是内建对象。
+
+- 普通对象：具有 JavaScript 对象所有默认内部行为
+- 特异对象：具有某些与默认行为不符的内部行为
+- 标准对象：ECMAScript 6 规范中定义的对象
+- 内建对象：脚本开始执行时存在于 JavaScript 环境中的对象，所有标准对象都是内建对象。
+
 ### 对象字面量语法扩展
+
 #### 属性值的简写
-	function createPerson(name,age){
-		return{
-			name,
-			age,
-		}
-	}
-原理：当对象字面量里只有一个属性的名称时，JavaScript引擎会在可访问的作用域中查找同名变量
-#### 对象方法的简写：消除冒号和`function`关键字 
+
+    function createPerson(name,age){
+    	return{
+    		name,
+    		age,
+    	}
+    }
+
+原理：当对象字面量里只有一个属性的名称时，JavaScript 引擎会在可访问的作用域中查找同名变量
+
+#### 对象方法的简写：消除冒号和`function`关键字
+
     var person = {
       name:'wxl',
       sayName(){
-	    console.log(this.name);
-	  }
+        console.log(this.name);
+      }
     };
+
 简写方法可以使用`super`关键字。
+
 ### 新增方法
+
 `Object.is()`：接收两个参数，如果两个参数类型相同且具有相同的值。
 `Object.assign()`：接收任意数量的源对象，并按照指定的顺序将属性复制到接收对象中。如果多个源对象具有同名属性，则排位靠后的源对象会覆盖排位靠前的。
 访问器属性：`Object.assign()`方法不能将提供者的访问器属性复制到接收对象中。由于`Object.assign()`执行了赋值操作，因此，访问器属性将转变为接收对象中的一个数据属性。
-			
-	var receiver = {},
-	  supplier = {
-	    get name(){
-    	return 'file.js'
-	  }
-	};
-	Object.assign(receiver,supplier);
+var receiver = {},
+supplier = {
+get name(){
+return 'file.js'
+}
+};
+Object.assign(receiver,supplier);
 
-	var descriptor = Object.getOwnPropertyDescriptor(receiver,'name');
+    var descriptor = Object.getOwnPropertyDescriptor(receiver,'name');
 
-	console.log(descriptor.value); // 'file.js'
-	console.log(descriptor.get);   //undefined 
+    console.log(descriptor.value); // 'file.js'
+    console.log(descriptor.get);   //undefined
+
 #### 重复的对象字面量属性
-ES5严格模式下：多个同名属性，报错
-ES6下：选取最后一次赋值
+
+ES5 严格模式下：多个同名属性，报错
+ES6 下：选取最后一次赋值
+
 #### 自有属性枚举顺序
+
 这会影响`Object.getOwnPropertyNames()`方法和`Reflect.ownKeys()`
 基本规则：
+
 1. 所有数字键按升序排序
 2. 所有字符串键按照它们被加入对象的顺序排序
-3. 所有Symbol键按照它们被加入对象的顺序排序
+3. 所有 Symbol 键按照它们被加入对象的顺序排序
+
 ### 增强对象原型
+
 改变对象的原型：`Object.setPrototypeOf()`,接收两个参数，被改变原型的对象及替代第一个参数原型的对象
-#### super引用：指向对象原型的指针，也就是`Object.getPrototypeOf(this)`的值
+
+#### super 引用：指向对象原型的指针，也就是`Object.getPrototypeOf(this)`的值
+
 注意：必须要在使用简写方法的对象中使用`super`引用
+
 ### 正式的方法定义
-ES6中正式将方法定义为一个函数，它会有一个内部的`[[HomeObject]]`属性来容纳这个方法从属的对象。
+
+ES6 中正式将方法定义为一个函数，它会有一个内部的`[[HomeObject]]`属性来容纳这个方法从属的对象。
