--- a/docs/深入理解ES6/9类.md
+++ b/docs/深入理解ES6/9类.md
@@ -1,9 +1,14 @@
-## 类
-### ES5中的近类结构
+# 类
+
+## ES5 中的近类结构
+
 思路：创建一个自定义类型：首先创建一个构造函数，然后定义另一个方法并赋值给构造函数的原型。
-### 类声明
+
+## 类声明
+
 使用`constructor`方法名来构造函数，且只有这一个保留方法名
 私有属性是实例中的属性，不会出现在原型上，且只能在类的构造函数或者方法中创建。
+
 ```
 class PersonClass{
   constructor(name){
@@ -15,7 +20,9 @@ class PersonClass{
   }
 }
 ```
-等价于上述例子的ES5 代码：
+
+等价于上述例子的 ES5 代码：
+
 ```
 //等价PersonClass代码
 let PersonType = (function () {
@@ -47,10 +54,13 @@ let PersonType = (function () {
   return PersonType;
 })();
 ```
-### 类表达式（类似于函数表达式）
-分类：  
 
-+ 基本的类表达式
+## 类表达式（类似于函数表达式）
+
+分类：
+
+- 基本的类表达式
+
 ```
  let PersonClass = class {
   constructor(name) {
@@ -62,7 +72,9 @@ let PersonType = (function () {
   }
 }
 ```
-+ 命名类表达式
+
+- 命名类表达式
+
 ```
  let PersonClass = class PersonClass2{
   constructor(name) {
@@ -74,12 +86,17 @@ let PersonType = (function () {
   }
 }
 ```
-类表达式实现和类声明区别：  通过`let`定义的外部绑定与通过`const`定义的内部绑定具有相同的名称；而命名表达式通过`const`定义名称，从而`PersonClass2`只能在类内部使用。
-### 一等公民的类
+
+类表达式实现和类声明区别： 通过`let`定义的外部绑定与通过`const`定义的内部绑定具有相同的名称；而命名表达式通过`const`定义名称，从而`PersonClass2`只能在类内部使用。
+
+## 一等公民的类
+
 可以传入函数，可以从函数返回，并且可以赋值给变量的值。
 
-### 访问器属性：
-类支持直接在原型上定义访问器属性，创建getter时，需要在关键字get后紧跟一个空格和相应的标识符；创建setter时，只需把关键字get 替换为set 即可。
+## 访问器属性：
+
+类支持直接在原型上定义访问器属性，创建 getter 时，需要在关键字 get 后紧跟一个空格和相应的标识符；创建 setter 时，只需把关键字 get 替换为 set 即可。
+
 ```
 class CustomHTMLElement{
   constructor(element){
@@ -95,7 +112,9 @@ class CustomHTMLElement{
   }
 }
 ```
-### 静态成员
+
+## 静态成员
+
 ```
 class PersonClass {
   static create(name) {
@@ -103,7 +122,9 @@ class PersonClass {
   }
 }
 ```
-### 继承与派生类
+
+## 继承与派生类
+
 ```
 class Rectangle {
   constructor(length, width) {
@@ -118,21 +139,30 @@ class Square extends Rectangle {
   }
 }
 ```
+
 继承自其他类的类被称作派生类，如果派生类中指定构造函数必须要调用`super()`。
 `super()`tips:
 
-+ 只可以在派生类的构造函数中使用`super`
-+ 想要访问`this`，之前一定要调用`super()`
-+ 如果不想调用`super`，则要在类的构造函数中返回一个对象
+- 只可以在派生类的构造函数中使用`super`
+- 想要访问`this`，之前一定要调用`super()`
+- 如果不想调用`super`，则要在类的构造函数中返回一个对象
 
-#### 类方法遮蔽
+## 类方法遮蔽
+
 派生类中的方法总会覆盖基类中的同名方法。如果想要调用基类中的该方法，使用`super.getArea()`。
-#### 静态成员继承
+
+## 静态成员继承
+
 如果基类有静态成员，那么在派生类中也可以使用。
-#### 派生自表达式的类
+
+## 派生自表达式的类
+
 只要表达式被解析为一个函数并且具有`[[Construct]]`属性和原型，那么就可以用`extends`进行派生。
-#### `Symbol.species`属性
+
+## `Symbol.species`属性
+
 `Symbol.species`被用于定义返回函数的静态访问器属性。被返回的函数是一个构造函数，每当要在实例的方法中（不是在构造函数中）创建类的实例时必须使用这个构造函数。
+
 ```
 class MyClass {
   static get [Symbol.species]() {
@@ -168,7 +198,9 @@ console.log(clone1 instanceof MyDerivedClass1); //true
 console.log(clone2 instanceof MyClass); //true
 console.log(clone2 instanceof MyDerivedClass2); //false
 ```
-#### 在类的构造函数中使用`new.target`:确定类是如何被调用的
+
+## 在类的构造函数中使用`new.target`:确定类是如何被调用的
+
 ```
 class Rectangle {
   constructor(length, width) {
