--- a/docs/高程笔记/九、客户端检测.md
+++ b/docs/高程笔记/九、客户端检测.md
@@ -1,40 +1,49 @@
-## 九、客户端检测
-### 能力检测
+# 九、客户端检测
+
+## 能力检测
+
 **用途**：识别浏览器的能力，尽量使用`typeof`进行能力检测。
 **示例**：检测对象是否支持排序
+
 ```javascript
 if(typeof obj.sort === 'function') {
 	obj.sort();
 	...
 }
 ```
-### 怪癖检测
-**用途**：检测浏览器存在什么缺陷，以确定某一特性不能正常工作。
-**示例**：`IE8`及更早版本中存在一个bug，如果实例属性与`[[Enumerable]]`标记为`false`的原型属性同名，那么在`for-in`循环中就不会被列举出来。
-```javascript
-var hasDontEnumQuirk = function(){
-        
-    var o = { toString : function(){} };
-    for (var prop in o){
-        if (prop == "toString"){
-            return false;
-        }
-    }
 
-    return true;
-}();
+## 怪癖检测
+
+**用途**：检测浏览器存在什么缺陷，以确定某一特性不能正常工作。
+**示例**：`IE8`及更早版本中存在一个 bug，如果实例属性与`[[Enumerable]]`标记为`false`的原型属性同名，那么在`for-in`循环中就不会被列举出来。
+
+```javascript
+var hasDontEnumQuirk = (function() {
+  var o = { toString: function() {} };
+  for (var prop in o) {
+    if (prop == "toString") {
+      return false;
+    }
+  }
+
+  return true;
+})();
 ```
-### 用户代理检测
+
+## 用户代理检测
+
 **用途**：通过检测用户代理字符串来确定实际使用的浏览器。
 
 **识别引擎及浏览器**：检测顺序要正确
+
 1. 检测`window.opera`对象，识别`opera`
 2. 检测`webkit`，通过检测`AppWebKit`字符串
-	1. 检测是`Chrome` 还是`Safari`
+   1. 检测是`Chrome` 还是`Safari`
 3. 检测`KHTML`
 4. 检测`gecko`
-	1.  检测是否`Firefox`
+   1. 检测是否`Firefox`
 5. 检测`IE`
+
 ```
 if (window.opera){
     engine.ver = browser.ver = window.opera.version();
@@ -42,7 +51,7 @@ if (window.opera){
 } else if (/AppleWebKit\/(\S+)/.test(ua)){
     engine.ver = RegExp["$1"];
     engine.webkit = parseFloat(engine.ver);
-    
+
     //figure out if it's Chrome or Safari
     if (/Chrome\/(\S+)/.test(ua)){
         browser.ver = RegExp["$1"];
@@ -50,24 +59,25 @@ if (window.opera){
     } else if (/Version\/(\S+)/.test(ua)){
         browser.ver = RegExp["$1"];
         browser.safari = parseFloat(browser.ver);
-    } 
+    }
 } else if (/KHTML\/(\S+)/.test(ua) || /Konqueror\/([^;]+)/.test(ua)){
     engine.ver = browser.ver = RegExp["$1"];
     engine.khtml = browser.konq = parseFloat(engine.ver);
-} else if (/rv:([^\)]+)\) Gecko\/\d{8}/.test(ua)){    
+} else if (/rv:([^\)]+)\) Gecko\/\d{8}/.test(ua)){
     engine.ver = RegExp["$1"];
     engine.gecko = parseFloat(engine.ver);
-    
+
     //determine if it's Firefox
     if (/Firefox\/(\S+)/.test(ua)){
         browser.ver = RegExp["$1"];
         browser.firefox = parseFloat(browser.ver);
     }
-} else if (/MSIE ([^;]+)/.test(ua)){    
+} else if (/MSIE ([^;]+)/.test(ua)){
     engine.ver = browser.ver = RegExp["$1"];
     engine.ie = browser.ie = parseFloat(engine.ver);
 }
 ```
+
 <br>
 **检测平台**：通过检测`navigator.platform`
 ```
