--- a/docs/高程笔记/四、变量、作用域和内存问题.md
+++ b/docs/高程笔记/四、变量、作用域和内存问题.md
@@ -1,52 +1,59 @@
- ## 四、 变量、作用域和内存问题
+# 四、 变量、作用域和内存问题
+
 [toc]
-### 4.1 基本类型和引用类型
+
+## 4.1 基本类型和引用类型
+
 基本类型：`Null`,`Undefined`,`String`,`Boolean`和`Number`这五种基本类型。  
 引用类型：多个值所构成的对象  
 <br>
 从下面几个方面来说明他们 的不同：
-+ 保存  
-基本类型的值在内存中占据固定大小位置，因此保存在`栈`中。  
-引用类型的值保存的值是对象，保存在堆中。  
 
-+ 操作  
-基本类型 是按值访问的，因此可以操作在变量中实际的值。  
-引用类型 不能直接访问在内存中的值，在操作对象时，如果是为对象添加属性，那么操作的就是实际的对象。如果是复制保存对象的变量，就是在操作对象的引用。  
+- 保存  
+  基本类型的值在内存中占据固定大小位置，因此保存在`栈`中。  
+  引用类型的值保存的值是对象，保存在堆中。
 
-+ 属性  
-基本类型不能添加属性。  
-引用类型可以添加属性和方法，也可以删除属性和方法。  
+- 操作  
+  基本类型 是按值访问的，因此可以操作在变量中实际的值。  
+  引用类型 不能直接访问在内存中的值，在操作对象时，如果是为对象添加属性，那么操作的就是实际的对象。如果是复制保存对象的变量，就是在操作对象的引用。
 
-+ 复制  
-复制基本类型的值会在变量对象上创建一个新值 ，也就是说新值只是一个副本，二者操作互不影响。  
-复制引用类型的值，实际复制的只是一个指针，指向存储在堆中的原对象，因此改变一个对象，会影响另一个对象。  
+- 属性  
+  基本类型不能添加属性。  
+  引用类型可以添加属性和方法，也可以删除属性和方法。
 
-+ 传递参数  
-`ECMAScript`中所有函数的参数都是**按值传递**的。向参数传递引用类型的值的时候，会把这个值在内存中的地址复制给函数的局部变量，也就是命名参数。如果该参数在函数内部被重写，此时引用的是一个局部对象的值，之后的修改不会影响实参。如下所示：
-<br>
+- 复制  
+  复制基本类型的值会在变量对象上创建一个新值 ，也就是说新值只是一个副本，二者操作互不影响。  
+  复制引用类型的值，实际复制的只是一个指针，指向存储在堆中的原对象，因此改变一个对象，会影响另一个对象。
 
-	``` js
-	function setName(obj) {
-		obj.name = "Nicholas";
-		obj = new Object();
-		obj.name = 'me';
-	}
+- 传递参数  
+  `ECMAScript`中所有函数的参数都是**按值传递**的。向参数传递引用类型的值的时候，会把这个值在内存中的地址复制给函数的局部变量，也就是命名参数。如果该参数在函数内部被重写，此时引用的是一个局部对象的值，之后的修改不会影响实参。如下所示：
+  <br>
 
-	var person = new Object();
-	setName(person);
-	alert(person.name);    //"Nicholas"
-	```
+      ``` js
+      function setName(obj) {
+      	obj.name = "Nicholas";
+      	obj = new Object();
+      	obj.name = 'me';
+      }
 
-+ 检测类型  
-	检测基本类型：`typeof`  
-	检测引用类型：`instanceof` 
-### 4.2 执行环境及作用域
-#### 基本概念
- ***执行环境***：定义了变量或函数有权访问的其他数据，可以分为两种：**局部环境**和**全局环境**。
-     
- ***变量对象***：每个执行环境都有与之相关的变量对象，环境中定义的所有变量和函数都保存在这个对象中。
- 
- ***作用域链***：代码在环境中执行的时候，会创建变量对象的作用域链，保证对执行环境有权访问的所有变量和函数的有序访问。
+      var person = new Object();
+      setName(person);
+      alert(person.name);    //"Nicholas"
+      ```
+
+- 检测类型  
+   检测基本类型：`typeof`  
+   检测引用类型：`instanceof`
+
+## 4.2 执行环境及作用域
+
+## 基本概念
+
+**_执行环境_**：定义了变量或函数有权访问的其他数据，可以分为两种：**局部环境**和**全局环境**。
+  
+ **_变量对象_**：每个执行环境都有与之相关的变量对象，环境中定义的所有变量和函数都保存在这个对象中。
+
+**_作用域链_**：代码在环境中执行的时候，会创建变量对象的作用域链，保证对执行环境有权访问的所有变量和函数的有序访问。
 
 ```sequence
 participant 执行环境
@@ -63,21 +70,28 @@ Note over 作用域链: ......
 Note over 作用域链:末尾：全局执行环境的变量对象
 ```
 
-#### 延长作用域链
+## 延长作用域链
+
 **延长作用域链**：就是在作用域链的前端加一个变量对象，会发生在以下`2`种情况：
-+ `with`语句：将指定的对象添加到作用域链
-+ `try...catch`语句的`catch`块：创建一个新的变量对象，包含被抛出的错误对象的声明。
-#### 没有块级作用域
+
+- `with`语句：将指定的对象添加到作用域链
+- `try...catch`语句的`catch`块：创建一个新的变量对象，包含被抛出的错误对象的声明。
+
+## 没有块级作用域
+
 **块级作用域**：指的是由花括号封闭的代码块都有自己的作用域。
 `JavaScript`没有块级作用域，因此容易导致一些困惑，典型的就是：由`for`语句创建的变量在循环结束后仍然可以访问。
 
     for(var i = 0;i < 10;i++){
-	    doSomething(i);
-	}
-	alert(i); //10
-### 4.3垃圾回收
-***垃圾回收原理***：找出不再使用的变量，然后释放其内存。为此，垃圾回收器会周期性的执行这一操作，时间间隔不定，同浏览器相关。
+        doSomething(i);
+    }
+    alert(i); //10
 
-***垃圾回收*** 有以下`2`中方式：
-+ `标记清除`：变量在进入环境时标记为“进入环境”，不能释放进入环境中的变量所占用的内存。当变量离开环境时，标记为“离开环境”。这是大多浏览器使用的方式。
-+ `引用计数`：跟踪每个值被引用的次数。这一方式会遇到一个严重的问题，就是`循环引用`。可以通过将不再使用的对象设置为`null`来`解除引用`。
+## 4.3 垃圾回收
+
+**_垃圾回收原理_**：找出不再使用的变量，然后释放其内存。为此，垃圾回收器会周期性的执行这一操作，时间间隔不定，同浏览器相关。
+
+**_垃圾回收_** 有以下`2`中方式：
+
+- `标记清除`：变量在进入环境时标记为“进入环境”，不能释放进入环境中的变量所占用的内存。当变量离开环境时，标记为“离开环境”。这是大多浏览器使用的方式。
+- `引用计数`：跟踪每个值被引用的次数。这一方式会遇到一个严重的问题，就是`循环引用`。可以通过将不再使用的对象设置为`null`来`解除引用`。
