--- a/docs/深入理解ES6/1-4.md
+++ b/docs/深入理解ES6/1-4.md
@@ -119,7 +119,7 @@ es6 中：`arguments`对象的行为保持与 es5 严格模式保持一致。默
 
 作用：指定多个独立参数，并通过整合后的数组来访问。
 
-##### es6 中不定参数的写法：...
+##### es6 中不定参数的写法：`...`
 
 ##### 使用限制：
 
