--- a/docs/深入理解ES6/8迭代器和生成器.md
+++ b/docs/深入理解ES6/8迭代器和生成器.md
@@ -46,9 +46,9 @@ for(let x of collection){
 
 - 集合对象迭代器：
 
-* `entries()` 其值为多个键值对
-* `values()` 返回值为集合的值
-* `keys()`其值为集合中所有键名
+  - `entries()` 其值为多个键值对
+  - `values()` 返回值为集合的值
+  - `keys()`其值为集合中所有键名
 
 - 字符串迭代器
 - `NodeList` 迭代器
