--- a/docs/高程笔记/五、引用类型.md
+++ b/docs/高程笔记/五、引用类型.md
@@ -53,8 +53,7 @@
 
 - **转换字符串**（4 种） + 从对象继承的`toString()`，`toLocalString()`和`valueOf()`方法 + `join()`方法，使用不同的分隔符，返回包含所有项的字符串，默认使用`,`分隔。
 
-
-    如果数组中包含`null`或`undefined`，在上述方法的返回结构中用`空字符串`表示。
+  > 如果数组中包含`null`或`undefined`，在上述方法的返回结构中用`空字符串`表示。
 
  <br>
 + 栈
@@ -69,37 +68,43 @@
 	`队列`:`先进先出`的数据结构。在列表的末位添加项，从列表的前端移除项。
 <br>
 	模拟队列：使用`push()`和`shift()`
-	反向模拟队列：使用`unshift()`和`pop()`	
+	反向模拟队列：使用`unshift()`和`pop()`
 <br>
 	方法：
 	+ `shift()`:移除数组的第一项并返回该元素。
 	+ `unshift()`:在数组的前端添加任意个项并返回新元素长度。
-<br>
-+ 重排序
-	+ `reverse()`：反转数组项的顺序
-	+ `sort()`:将数组元素进行排序，默认比较每个数组项的字符串编码进行升序排序。可以传入比较函数作为参数，比较函数接受两个参数，如果第一个参数应该位于第二个参数之前，返回负数。如果二者相等，返回0，如果第一个参数应该位于第二个参数之后，返回正数。
-<br>
-+ 操作
-	+ `concat()`
-		+ 功能：将接受到的参数添加到数组的末尾，并返回新数组。
-		+ 参数：如果参数是数组，就会将数组中的每一项添加到结果数组中。
-<br>
-	+ `slice()`
-		+ 功能：基于当前数组中的一个或多个项创建一个新数组。
-		+ 参数：传递要返回项的起始位置和结束位置，返回数组指定位置中间的项——不包含结束位置的项。如果参数是负数，则用数组长度加上该数来确定相应位置。
-<br>
-	+ `splice()`
-		+ 参数：（起始位置，删除个数，替换项）
-		功能：主要是向数组中插入项
-		+ 删除：只传入前两个参数
-		+ 插入：提供三个参数：起始位置，0，和插入项
-		+ 替换：提供三个参数：起始位置，删除个数 和 插入项
 
 <br>
 
-- 位置  
-   + 方法： + `indexOf()`：从数组的开头查找指定项的位置 + `lastIndexOf()`：从数组的末尾查找指定项的位置 + **功能**：这两个方法都返回要查找项在数组中的位置，如果找不到则返回`-1`。 + **参数**：这两个方法接收同样的参数，`查找项`和`起始位置`
-  <br>
+- 重排序
+
+      	+ `reverse()`：反转数组项的顺序
+      	+ `sort()`:将数组元素进行排序，默认比较每个数组项的字符串编码进行升序排序。可以传入比较函数作为参数，比较函数接受两个参数，如果第一个参数应该位于第二个参数之前，返回负数。如果二者相等，返回0，如果第一个参数应该位于第二个参数之后，返回正数。
+
+- 操作
+
+  - `concat()`
+
+    - 功能：将接受到的参数添加到数组的末尾，并返回新数组。
+    - 参数：如果参数是数组，就会将数组中的每一项添加到结果数组中。
+
+  - `slice()`  
+    功能：基于当前数组中的一个或多个项创建一个新数组。  
+    参数：传递要返回项的起始位置和结束位置，返回数组指定位置中间的项——不包含结束位置的项。如果参数是负数，则用数组长度加上该数来确定相应位置。
+
+  - `splice()`  
+    参数：（起始位置，删除个数，替换项）
+    功能：主要是向数组中插入项
+    - 删除：只传入前两个参数
+    - 插入：提供三个参数：起始位置，0，和插入项
+    - 替换：提供三个参数：起始位置，删除个数 和 插入项
+
+<br>
+
+- 位置
+
+  - 方法： + `indexOf()`：从数组的开头查找指定项的位置 + `lastIndexOf()`：从数组的末尾查找指定项的位置 + **功能**：这两个方法都返回要查找项在数组中的位置，如果找不到则返回`-1`。 + **参数**：这两个方法接收同样的参数，`查找项`和`起始位置`
+    <br>
 
 - 迭代 + 参数：这 5 个方法均接受两个参数，要在每一项上运行的函数和运行该函数的作用域。 + `every()` + 返回值：如果每项对函数都返回`true`，则返回`true`。 + 适用：查询数组中每一项是否都满足条件 + `filter()` + 返回值：返回给定函数会返回`true`的项组成的数组。 + 适用：查询符合条件的所有数组项 + `forEach()` + 返回：没有返回值 + 适用：对每项都运行给定函数，可以替代`for` + `map()` + 返回：给定函数调用结果所组成的数组。 + 适用：创建与原数组一一对应的数组 + `some()` + 返回：如果有一项对函数返回`true`,则返回`true` + 适用：查询数组中是否有满足给定函数的项，。
   <br>
@@ -116,7 +121,7 @@
 
 ## 5.4 `RegExp`类型
 
-## 基本概念
+### 基本概念
 
 **模式(`pattern`)**：可以是任何简单或复杂的正则表达式，可以包含字符类、限定符、分组、向前查找以及反向引用。
 **_标志(`flags`)_**：标明正则表达式的行为。有以下`3`种
@@ -126,18 +131,21 @@
 - `m`：表示多行模式，在到达一行末尾时会继续查找下一行。
   <br>
 
-**_创建_**：
+### 创建
 
 1. 正则表达式字面量
+
    ```javascript
    var regexp = /pattern/falgs
    ```
+
 2. `RegExp`构造函数，需要注意的是两个参数都接受字符串，所以第一个参数必须经过双重转义
+
    ```javascript
    var pattern1 = new RegExp(".at", "i");
    ```
 
-## 实例属性
+### 实例属性
 
 通过实例属性可以取得有关模式的各种信息。
 
@@ -147,28 +155,35 @@
 - `multiline`:布尔值，是否设置`m`标志
 - `source`: 正则表达式的字符串表示，按照字面量形式传入，而不是经过转义的字符串模式。
 
-## 方法
+### 方法
+
+正则表达式拥有以下实例方法：
 
 - `exec()` + **参数**：应用模式的字符串 + **_返回_**：第一个匹配项信息的数组，没有匹配项则返回`null`
 - `test()`：接收字符串参数，匹配则返回`true`,否则返回`false`
 
 ## 5.5 `Function`类型
 
-## 创建
+### 创建
 
 1. 函数声明
+
    ```javascript
    function sum(num1, num2) {
      return num1 + num2;
    }
    ```
+
 2. 函数表达式
+
    ```javascript
    var sum = function(num1, num2) {
      return num1 + num2;
    };
    ```
+
 3. 使用`Function`构造函数（不推荐），这种语法会导致两次解析代码，影响性能。
+
    ```javascript
    var sum = new Function("num1", "num2", "return num1 + num2");
    ```
@@ -252,13 +267,13 @@
 
 ## 函数属性和方法
 
-## 属性
+### 属性
 
 - `name`函数的名称
 - `length` 接收的命名参数个数
 - `prototype` 保存它们的实例方法
 
-## 方法
+### 方法
 
 - `apply()` 在特定的作用域中调用函数，接收两个参数，第一个是在其中运行函数的作用域（`this`值），另一个是参数数组
 - `call()`与`apply()`作用相同，不同的是必须明确传递每一个参数
