--- a/docs/高程笔记/六、面向对象.md
+++ b/docs/高程笔记/六、面向对象.md
@@ -87,6 +87,7 @@ alert(typeof descriptor.get); //"undefined"
 
 1. 工厂模式
    **示例**
+
    ```javascript
    function createPerson(name, age, job) {
      var o = new Object();
@@ -99,7 +100,9 @@ alert(typeof descriptor.get); //"undefined"
      return o;
    }
    ```
+
    **优缺点**：解决了创建多个对象的问题，但是无法解决对象识别问题。
+
 2. 构造函数模式
    <br>
    示例
@@ -129,7 +132,6 @@ alert(typeof descriptor.get); //"undefined"
    对象实例->原型对象: __proto__(非标准)/Object.getPrototypeOf()
    原型对象-->对象实例: isPrototypeOf()
    ```
-
 
     **属性读取**：当读取某个对象的属性时，首先从对象实例中查找该属性名，如果找到则返回该***实例属性***，如果没有找到，则继续搜索指针指向的原型对象，在原型对象中查找给定名字的属性，如果在原型对象中找到，则返回该***原型属性***。通过对象实例可以访问到原型属性，但是无法修改。
     <br>
@@ -192,7 +194,7 @@ alert(typeof descriptor.get); //"undefined"
         ```
     <br>
 
-4.  组合使用构造函数模式和原型模式（最常见）
+4. 组合使用构造函数模式和原型模式（最常见）
 
     **使用方式**：
     构造函数模式用于定义实例属性，原型模式用于定义方法和共享的属性。
@@ -215,9 +217,10 @@ alert(typeof descriptor.get); //"undefined"
 
     <br>
 
-5.  动态原型方式  
+5. 动态原型方式  
     **使用方法**：
     将所有信息都封装在构造函数中，在构造函数中初始化原型。通过检查摸个应该存在方法是否有效，来决定是否初始化原型。这种方法可以使用`instanceof`确定它的类型。
+
     ```javascript
     function Person(name, age, job) {
       //properties
@@ -233,8 +236,10 @@ alert(typeof descriptor.get); //"undefined"
       }
     }
     ```
+
     <br>
-6.  寄生构造函数模式  
+
+6. 寄生构造函数模式  
     **使用方法**：
     创建一个函数，该函数用于封装创建对象的代码，然后返回新创建的对象。
 
@@ -259,10 +264,11 @@ alert(typeof descriptor.get); //"undefined"
     **缺点**：不能使用`instanceof`确定对象类型。
     <br>
 
-7.  稳妥构造函数模式
+7. 稳妥构造函数模式
     <br>
     **使用方式**
-    ```javascript
+
+    ````javascript
     function Person(name, age, job) {
     var o = new Object();
     //可以在此定义私有变量和函数
@@ -280,6 +286,7 @@ alert(typeof descriptor.get); //"undefined"
         <br>
 
     **适用**：在某些安全执行环境
+    ````
 
 ## 6.3 继承
 
