遍历和范围

--- a/docs/高程笔记/12.DOM2和DOM3/12.DOM2和DOM3.md
+++ b/docs/高程笔记/12.DOM2和DOM3/12.DOM2和DOM3.md
@@ -194,3 +194,114 @@ function getElementLeft(element) {
 #### 确定元素大小的方法
 
 `getBoundingClientRect()`返回一个矩形对象，包括`left`,`top`,`bottom`,`right`4 个属性。
+
+### 遍历
+
+在`DOM2`中，定义了两个用于辅助完成顺序遍历的类型：`NodeIterator`和`TreeWalker`。二者在进行遍历操作时都遵循**深度优先**。
+
+#### `NodeIterator`
+
+##### 创建实例
+
+使用`document.createNodeIterator(根节点,要访问节点的数字代码,过滤对象或返回过滤对象的函数,false)`方法。
+
+##### 方法
+
+- `nextNode()`前进一步
+- `previousNode()`后退一步
+
+##### 示例
+
+#### `TreeWalker`
+
+##### 创建实例
+
+使用`document.createTreeWalker()`创建，接收与创建`NodeIterator`同样的参数。
+
+##### 方法
+
+除了支持`nextNode()`和`previousNode()`外，还支持以下方法：
+
+- `parentNode()` 遍历到当前节点的父节点
+- `firstChild()`遍历到当前节点的第一个子节点
+- `lastChild()`遍历到当前节点的最后一个子节点
+- `nextSibling()`遍历到当前节点的下一个兄弟节点
+- `previousSibling()`遍历到当前节点的上一个兄弟节点
+
+##### 属性
+
+`TreeWalker`类型有一个名为`currentNode`的属性，表示遍历方法在上一次遍历中返回的节点。
+
+## 范围
+
+### `DOM`中的范围
+
+#### 创建范围
+
+使用`createRange()`方法
+
+#### 有关“位置信息”的属性
+
+- `startContainer` 选区第一个节点的父节点
+- `startOffset` 范围在`startContainer`中起点的偏移量
+- `endContainer`选区最后一个节点的父节点
+- `endOffset` 范围在`endContainer`中的偏移量
+- `commonAncestorContainer` `startContainer`和`endContainer`共同的祖先节点在文档树中位置最深的那个
+
+#### 使用
+
+1. 简单选择
+   - `selectNode()`接收一个`dom`节点，选择整个节点包括其子节点
+   - `selectNodeContents()` 接收一个`dom`节点，选择节点的子节点
+   - 其余方法：`setStartBefore(refNode)`,`setStartAfter(refNode)`,`setEndBefore(refNode)`和`setEndAfter(refNode)`
+2. 复杂选择，接收一个参照节点和一个偏移量值，可以用来选择节点的一部分
+   - `setStart()` 参照节点变成`startContainer`，偏移量变成`startOffset`
+   - `setEnd()` 参照节点变成好`endContainer`，偏移量变成`endOffset`
+3. 操作`Dom`范围中的内容
+   - `deleteContents()` 从文档中删除范围所包含的内容
+   - `extractContents()` 从文档中移除范围选区，并返回范围的文档片段。
+   - `cloneContents()` 创建范围对象的一个副本
+4. 插入`DOM`范围中的内容
+   - `insertNode()` 向范围选区的开始处插入一个节点
+   - `surrondContents()` 环绕范围插入内容，接收**环绕范围内容的节点** 作为参数
+5. 折叠`DOM`范围
+   - `collapse()` 折叠范围，接收一个布尔值作为参数，`true`表示折叠到范围的起点，`false`表示折叠到范围的终点。
+   - `collapsed`属性：表示范围是否折叠
+6. 比较`DOM`范围`compareBoundaryPoints()`
+   接受两个**参数**：**比较方式**和**要比较的范围**。
+   **返回值**：如果第一个范围中的点位于第二个范围中之前，返回-1。如果两个点相等，返回 0。位于之后，返回 1。
+7. 复制范围：`cloneRange()`
+8. 清理范围：`detach()`
+
+```
+range.detach(); // 从文档中分离
+range = null; // 解除引用
+```
+
+### `IE8`及更早版本的范围
+
+#### 创建范围
+
+使用`createTextRange()`创建文本范围、
+
+#### 使用
+
+1. 简单选择
+   - 选择页面中某一区域：`findText()`，传入**_要查找的文本_** 和**_表示方向的数值_**，负值表示向后，正值表示向前。
+   - 选择某个元素的所有文本：`moveToElementText(<DOM>)`
+2. 复杂选择
+   以下方法均接受两个参数：**移动单位**和**移动单位数量**。**移动单位**可以是`"character"`，`"word"`，`"sentence"` 或 `"textedit"` 中的一个。
+   方法：
+   - `moveStart()`移动范围起点
+   - `moveEnd()` 移动范围终点
+   - `move()` 首先折叠返回（让起点和终点相等），然后再移动
+   - `expand()` 将范围规范化，用于将任何部分 选择的文本全部选中
+3. 操作内容
+   - 用`text`属性：获取或设置范围中的文本
+   - `pasteHTML()`方法：向范围中插入`HTML`代码
+4. 折叠范围，使用`collapse()`,接收一个布尔值作为参数，`true`表示折叠到范围的起点，`false`表示折叠到范围的终点。
+5. 比较范围
+   - `compareEndPoints(<range>,'StartToStart'|'StartToEnd'|'EndToEnd'|'EndToStart')`比较范围
+   - `isEqual()`范围是否相等
+   - `inRange()`一个范围是否包含另一个范围
+6. 复制范围副本： `duplicate()`
