--- a/docs/高程笔记/13.事件/13.事件.md
+++ b/docs/高程笔记/13.事件/13.事件.md
@@ -219,3 +219,49 @@ window.event.cancelBubble = true;
 **相关元素**：在 mouseout 和 mouseover 事件时，涉及到光标从一个元素移动到另一个元素之内。除去目标元素的另一个元素叫做相关元素。保存在 event 对象的 relatedTarget 属性。在 IE 中则保存在 fromElement 或 toElement 属性中。
 
 **鼠标按键指示**： 在 mousedown 和 mouseup 事件中，event 对象的 button 属性保存按下或释放的按钮。值为 0 表示主按钮，1 表示滚轮，2 表示次按钮。
+**更多的事件信息**： 提供事件的更多信息，保存在 `detail`属性。如果是鼠标事件，detail 保存在给定位置 上发生单击的次数。
+
+**IE中提供的事件信息：** altLeft , ctrlLeft ,shiftLeft 分别表示对应按键是否被按下。offsetX 和 offsetY 代表光标相对于目标元素边界的x,y 坐标。
+
+#### 鼠标滚轮事件
+**触发**：使用鼠标滚轮进行交互时。支持冒泡。
+
+**`wheelDelta`属性**：向前滚动是，是120 的倍数，向后滚动时，是-120 的倍数。在早期的 opera 中，该值的正负号是相反的。在Firefox 中，支持一个名为 `DOMwheelScroll`的时间，有关滚轮方向的值保存在 detail 属性中。向前滚动时，该值是 -3 的倍数，向后滚动时，该值是 3 的倍数。
+
+### 键盘与文本事件
+
+#### 键盘事件
+
+- **keydown**  按下**任意键**触发
+- **keypress** 按下**字符键**触发，按住不放重复触发。ESC 也触发该事件。
+- **keyup** 释放键盘上的键时触发。
+
+#### 文本事件
+
+- **textInput**：在文本插入文本框之前触发，这是对 keypress 事件的补充
+
+#### 相关属性
+
+- **keyCode** 与键盘某一按键对应的编码，最常用的是 enter 键对应的keyCode 为 13。触发 keyup 和 keydown 事件时，该属性才包含值。
+- **charCode**  在 keypress 事件发生时，该属性保存按下的那个键所代表的字符的 ASCII 编码。
+
+#### DOM3 级关于键盘事件的变化
+
+**新增属性**
+
+- **key** 为了取代 keycode ，如果按下字符键，该值是对应字符。如果为非字符键，该值为相应键名。
+- **char**  按下字符键时与 key 属性相同，按下非字符键则值为 null 
+- **location** 表示按下什么位置的键。
+- **getModifierState()** 传入表示修改键的字符串，返回该按键是否按下的布尔值。
+  
+#### **textInput**事件
+
+**属性**
+
+- **data** 表示用户输入的字符
+- **inputMethod** 表示文本输入到文本框中的方式
+
+**textInput** 和 **keypress**区别
+
+1. 触发事件的元素不同。只有可编辑区域才能触发 textInput ，但所有可获得的焦点的元素都可触发 keypress。
+2. 能够触发事件的按键范围。只有实际的字符键才能触发 textInput，但影响文本显示的键就能触发 keypress，例如 ESC。
