--- a/docs/高程笔记/13.事件/13.事件.md
+++ b/docs/高程笔记/13.事件/13.事件.md
@@ -250,7 +250,7 @@ window.event.cancelBubble = true;
 **新增属性**
 
 - **key** 为了取代 keycode ，如果按下字符键，该值是对应字符。如果为非字符键，该值为相应键名。
-- **char**  按下字符键时与 key 属性相同，按下非字符键则值为 null 
+- **char**  按下字符键时与 key 属性相同，按下非字符键则值为 null
 - **location** 表示按下什么位置的键。
 - **getModifierState()** 传入表示修改键的字符串，返回该按键是否按下的布尔值。
   
@@ -265,3 +265,83 @@ window.event.cancelBubble = true;
 
 1. 触发事件的元素不同。只有可编辑区域才能触发 textInput ，但所有可获得的焦点的元素都可触发 keypress。
 2. 能够触发事件的按键范围。只有实际的字符键才能触发 textInput，但影响文本显示的键就能触发 keypress，例如 ESC。
+### 复合事件
++ **compositionstart**： 文本系统打开时触发。
++ **compositionupdate**：向输入字段插入新字符时触发。
++ **compositionend** ：文本复合系统关闭时触发，表示返回正常键盘输入状态。
+
+**IME**： 输入法编辑器，IME 通常需要同时按住多个键，但最终只输入一个字符。
+
+**复合事件作用**： 用于处理 IME 的输入序列。
+
+**兼容性**：IE9 是唯一支持复合事件的浏览器，因此用处不大。
+
+#### 检测浏览器是否支持复合事件
+```javascript
+document.implementation.hasFeature("CompositionEvent","3.0")
+```
+### 变动事件
++ **DOMSubtreeModified** DOM 结构发生变化时触发，以下事件发生后均会引起该事件。
++ **DOMNodeInserted** 节点作为子节点被插入到一个节点中触发，支持冒泡。
++ **DOMNodeRemoved** 节点从其父节点被移除时触发，支持冒泡。
++ **DOMNodeInsertedIntoDocument** 节点被直接插入文档中之后触发，该事件在DOMNodeInserted 之后触发，不支持冒泡。
++ **DOMNodeRemovedFromDocument** 节点从文档中删除后触发，该事件在 DOMNodeRemoved 之后触发，不支持冒泡。
++ **DOMAttrModified** 特性被修改之后触发。
++ **DOMCharacterDataModified** 文本节点的值发生变化之后触发。
+#### 检测变动事件
+```javascript
+document.implementation.hasFeature("MutataionEvents","2.0");
+```
+#### 删除节点触发事件顺序
+1. 触发 DOMNodeRemoved 事件，event.target 指向被删除节点，event.relatedNode 指向目标节点父节点
+2. 在目标节点及其子节点上触发 DOMNodeRemovedFromDocument 事件
+3. 在目标节点的父节点上触发 DOMSubtreeModified 事件。
+#### 插入节点触发的事件顺序
+1. 触发 DOMNodeInserted 事件，event.target 指向被插入节点，event.relatedNode 指向目标节点父节点
+2. 在新插入节点上触发 DOMNodeRemovedFromDocument 事件
+3. 在新插入节点的父节点上触发 DOMSubtreeModified 事件。
+### html5 事件
+#### 1. **contextmenu** 事件
+**用途**：表示何时应该展示上下文菜单，以便开发人员取消默认的上下文菜单而提供自定义的菜单。
+**建议**：该事件支持冒泡，所以通常将事件绑定在document 上。
+#### 2. beforeunload 事件
+**用途**：可以在页面卸载时阻止，将控制权交给客户。
+**实现在关闭前二次确认**：将 event.returnValue 的值显示为要显示给用户的字符串，同时作为函数的值返回。
+```
+windown.addEventListener('beforeunload',(e) => {
+	var msg = "确认离开吗？";
+	event.returnValue = msg;
+	return msg;
+})
+```
+#### 3.DOMContentLoaded事件
+**触发时机**：在形成完整的DOM树之后就会触发，不理会外部资源是否加载完毕。
+**好处**：支持在页面下载的早期添加事件处理程序，能够尽早与页面交互。
+**示例**
+```javascript
+document.addEventListener('DOMContentLoaded',function(){
+	...
+})
+//对不支持该事件的浏览器
+setTimeout(function(){},0);
+```
+#### 4. readystatechange 事件
+IE为DOM文档中的某些部分提供了readystatechange 事件。
+
+**用途**：提供与文档或元素的加载状态有关的信息。
+##### readystate 属性
+支持readystatechange 事件的对象都有一个readystate 属性。可能包含下列5个值之一：
++ **uninitialized(未初始化)** 对象存在但未初始化
++ **loading（正在加载）** 对象正在加载数据
++ **loaded（加载完毕）** 对象加载数据完毕
++ **interactive(交互)** 可以操作对象，但还没有完全加载。
++ **complete（完成）** 对象已经加载完毕
+##### 使用建议
+并非所有对象都有上述的几个状态，而且该属性的值不总是连续的。通常建议检测多个状态。
+```
+document.addEventListener('readystatechange',()=> {
+	if(document.readyState === 'interactive' || document.readyState === 'complete'){
+	...
+	}
+},false)
+```
