--- a/docs/高程笔记/13.事件/13.事件.md
+++ b/docs/高程笔记/13.事件/13.事件.md
@@ -221,18 +221,19 @@ window.event.cancelBubble = true;
 **鼠标按键指示**： 在 mousedown 和 mouseup 事件中，event 对象的 button 属性保存按下或释放的按钮。值为 0 表示主按钮，1 表示滚轮，2 表示次按钮。
 **更多的事件信息**： 提供事件的更多信息，保存在 `detail`属性。如果是鼠标事件，detail 保存在给定位置 上发生单击的次数。
 
-**IE中提供的事件信息：** altLeft , ctrlLeft ,shiftLeft 分别表示对应按键是否被按下。offsetX 和 offsetY 代表光标相对于目标元素边界的x,y 坐标。
+**IE 中提供的事件信息：** altLeft , ctrlLeft ,shiftLeft 分别表示对应按键是否被按下。offsetX 和 offsetY 代表光标相对于目标元素边界的 x,y 坐标。
 
 #### 鼠标滚轮事件
+
 **触发**：使用鼠标滚轮进行交互时。支持冒泡。
 
-**`wheelDelta`属性**：向前滚动是，是120 的倍数，向后滚动时，是-120 的倍数。在早期的 opera 中，该值的正负号是相反的。在Firefox 中，支持一个名为 `DOMwheelScroll`的时间，有关滚轮方向的值保存在 detail 属性中。向前滚动时，该值是 -3 的倍数，向后滚动时，该值是 3 的倍数。
+**`wheelDelta`属性**：向前滚动是，是 120 的倍数，向后滚动时，是-120 的倍数。在早期的 opera 中，该值的正负号是相反的。在 Firefox 中，支持一个名为 `DOMwheelScroll`的时间，有关滚轮方向的值保存在 detail 属性中。向前滚动时，该值是 -3 的倍数，向后滚动时，该值是 3 的倍数。
 
 ### 键盘与文本事件
 
 #### 键盘事件
 
-- **keydown**  按下**任意键**触发
+- **keydown** 按下**任意键**触发
 - **keypress** 按下**字符键**触发，按住不放重复触发。ESC 也触发该事件。
 - **keyup** 释放键盘上的键时触发。
 
@@ -242,18 +243,18 @@ window.event.cancelBubble = true;
 
 #### 相关属性
 
-- **keyCode** 与键盘某一按键对应的编码，最常用的是 enter 键对应的keyCode 为 13。触发 keyup 和 keydown 事件时，该属性才包含值。
-- **charCode**  在 keypress 事件发生时，该属性保存按下的那个键所代表的字符的 ASCII 编码。
+- **keyCode** 与键盘某一按键对应的编码，最常用的是 enter 键对应的 keyCode 为 13。触发 keyup 和 keydown 事件时，该属性才包含值。
+- **charCode** 在 keypress 事件发生时，该属性保存按下的那个键所代表的字符的 ASCII 编码。
 
 #### DOM3 级关于键盘事件的变化
 
 **新增属性**
 
 - **key** 为了取代 keycode ，如果按下字符键，该值是对应字符。如果为非字符键，该值为相应键名。
-- **char**  按下字符键时与 key 属性相同，按下非字符键则值为 null
+- **char** 按下字符键时与 key 属性相同，按下非字符键则值为 null
 - **location** 表示按下什么位置的键。
 - **getModifierState()** 传入表示修改键的字符串，返回该按键是否按下的布尔值。
-  
+
 #### **textInput**事件
 
 **属性**
@@ -265,10 +266,12 @@ window.event.cancelBubble = true;
 
 1. 触发事件的元素不同。只有可编辑区域才能触发 textInput ，但所有可获得的焦点的元素都可触发 keypress。
 2. 能够触发事件的按键范围。只有实际的字符键才能触发 textInput，但影响文本显示的键就能触发 keypress，例如 ESC。
+
 ### 复合事件
-+ **compositionstart**： 文本系统打开时触发。
-+ **compositionupdate**：向输入字段插入新字符时触发。
-+ **compositionend** ：文本复合系统关闭时触发，表示返回正常键盘输入状态。
+
+- **compositionstart**： 文本系统打开时触发。
+- **compositionupdate**：向输入字段插入新字符时触发。
+- **compositionend** ：文本复合系统关闭时触发，表示返回正常键盘输入状态。
 
 **IME**： 输入法编辑器，IME 通常需要同时按住多个键，但最终只输入一个字符。
 
@@ -277,36 +280,51 @@ window.event.cancelBubble = true;
 **兼容性**：IE9 是唯一支持复合事件的浏览器，因此用处不大。
 
 #### 检测浏览器是否支持复合事件
+
 ```javascript
-document.implementation.hasFeature("CompositionEvent","3.0")
+document.implementation.hasFeature("CompositionEvent", "3.0");
 ```
+
 ### 变动事件
-+ **DOMSubtreeModified** DOM 结构发生变化时触发，以下事件发生后均会引起该事件。
-+ **DOMNodeInserted** 节点作为子节点被插入到一个节点中触发，支持冒泡。
-+ **DOMNodeRemoved** 节点从其父节点被移除时触发，支持冒泡。
-+ **DOMNodeInsertedIntoDocument** 节点被直接插入文档中之后触发，该事件在DOMNodeInserted 之后触发，不支持冒泡。
-+ **DOMNodeRemovedFromDocument** 节点从文档中删除后触发，该事件在 DOMNodeRemoved 之后触发，不支持冒泡。
-+ **DOMAttrModified** 特性被修改之后触发。
-+ **DOMCharacterDataModified** 文本节点的值发生变化之后触发。
+
+- **DOMSubtreeModified** DOM 结构发生变化时触发，以下事件发生后均会引起该事件。
+- **DOMNodeInserted** 节点作为子节点被插入到一个节点中触发，支持冒泡。
+- **DOMNodeRemoved** 节点从其父节点被移除时触发，支持冒泡。
+- **DOMNodeInsertedIntoDocument** 节点被直接插入文档中之后触发，该事件在 DOMNodeInserted 之后触发，不支持冒泡。
+- **DOMNodeRemovedFromDocument** 节点从文档中删除后触发，该事件在 DOMNodeRemoved 之后触发，不支持冒泡。
+- **DOMAttrModified** 特性被修改之后触发。
+- **DOMCharacterDataModified** 文本节点的值发生变化之后触发。
+
 #### 检测变动事件
+
 ```javascript
-document.implementation.hasFeature("MutataionEvents","2.0");
+document.implementation.hasFeature("MutataionEvents", "2.0");
 ```
+
 #### 删除节点触发事件顺序
+
 1. 触发 DOMNodeRemoved 事件，event.target 指向被删除节点，event.relatedNode 指向目标节点父节点
 2. 在目标节点及其子节点上触发 DOMNodeRemovedFromDocument 事件
 3. 在目标节点的父节点上触发 DOMSubtreeModified 事件。
+
 #### 插入节点触发的事件顺序
+
 1. 触发 DOMNodeInserted 事件，event.target 指向被插入节点，event.relatedNode 指向目标节点父节点
 2. 在新插入节点上触发 DOMNodeRemovedFromDocument 事件
 3. 在新插入节点的父节点上触发 DOMSubtreeModified 事件。
+
 ### html5 事件
+
 #### 1. **contextmenu** 事件
+
 **用途**：表示何时应该展示上下文菜单，以便开发人员取消默认的上下文菜单而提供自定义的菜单。
-**建议**：该事件支持冒泡，所以通常将事件绑定在document 上。
+**建议**：该事件支持冒泡，所以通常将事件绑定在 document 上。
+
 #### 2. beforeunload 事件
+
 **用途**：可以在页面卸载时阻止，将控制权交给客户。
 **实现在关闭前二次确认**：将 event.returnValue 的值显示为要显示给用户的字符串，同时作为函数的值返回。
+
 ```
 windown.addEventListener('beforeunload',(e) => {
 	var msg = "确认离开吗？";
@@ -314,10 +332,13 @@ windown.addEventListener('beforeunload',(e) => {
 	return msg;
 })
 ```
-#### 3.DOMContentLoaded事件
-**触发时机**：在形成完整的DOM树之后就会触发，不理会外部资源是否加载完毕。
+
+#### 3.DOMContentLoaded 事件
+
+**触发时机**：在形成完整的 DOM 树之后就会触发，不理会外部资源是否加载完毕。
 **好处**：支持在页面下载的早期添加事件处理程序，能够尽早与页面交互。
 **示例**
+
 ```javascript
 document.addEventListener('DOMContentLoaded',function(){
 	...
@@ -325,19 +346,27 @@ document.addEventListener('DOMContentLoaded',function(){
 //对不支持该事件的浏览器
 setTimeout(function(){},0);
 ```
+
 #### 4. readystatechange 事件
-IE为DOM文档中的某些部分提供了readystatechange 事件。
+
+IE 为 DOM 文档中的某些部分提供了 readystatechange 事件。
 
 **用途**：提供与文档或元素的加载状态有关的信息。
+
 ##### readystate 属性
-支持readystatechange 事件的对象都有一个readystate 属性。可能包含下列5个值之一：
-+ **uninitialized(未初始化)** 对象存在但未初始化
-+ **loading（正在加载）** 对象正在加载数据
-+ **loaded（加载完毕）** 对象加载数据完毕
-+ **interactive(交互)** 可以操作对象，但还没有完全加载。
-+ **complete（完成）** 对象已经加载完毕
+
+支持 readystatechange 事件的对象都有一个 readystate 属性。可能包含下列 5 个值之一：
+
+- **uninitialized(未初始化)** 对象存在但未初始化
+- **loading（正在加载）** 对象正在加载数据
+- **loaded（加载完毕）** 对象加载数据完毕
+- **interactive(交互)** 可以操作对象，但还没有完全加载。
+- **complete（完成）** 对象已经加载完毕
+
 ##### 使用建议
+
 并非所有对象都有上述的几个状态，而且该属性的值不总是连续的。通常建议检测多个状态。
+
 ```
 document.addEventListener('readystatechange',()=> {
 	if(document.readyState === 'interactive' || document.readyState === 'complete'){
