--- a/docs/高程笔记/13.事件/13.事件.md
+++ b/docs/高程笔记/13.事件/13.事件.md
@@ -374,3 +374,46 @@ document.addEventListener('readystatechange',()=> {
 	}
 },false)
 ```
+
+#### 5. pageshow 和 pagehide 事件
+
+##### 往返缓存（bfcache）
+
+**往返缓存**：将整个页面都保存在内存中。可以在用户使用“前进”和“后退”时加快页面的转换速度。
+**注意**：如果页面处于 bfcache 中，将不会触发 load 事件。
+
+##### pageshow
+
+**触发条件**： 页面显示时触发，在 load 事件后触发
+**event 中的属性**
+
+- `persisted`：页面是否保存在 bfcache 中。
+  **使用建议**： 将其事件处理程序添加到 window
+
+```javascript
+window.addEventListener("pageshow", function(event) {
+  console.log("pageshow:");
+  console.log(event);
+});
+```
+
+##### pagehide
+
+**触发条件** 卸载页面时触发，在 unload 事件前触发。
+**使用建议**： 将其事件处理程序添加到 window
+
+#### 6. haschange 事件
+
+**触发条件**： url 的参数列表（及 url 中 # 后的字符串）变化时触发
+
+**事件属性**
+
+- `oldURL` 和 `newURL` 参数列表变化前后的的完整 url，由于兼容性问题**_不建议使用_**，最好使用 location 来确定当前的参数列表。
+
+**检测是否支持 haschange 事件**
+
+```javascript
+var isSupported =
+  "onhaschange" in window &&
+  (document.documentMode === undefined || document.documentMode > 7);
+```
