--- a/docs/高程笔记/13.事件/13.事件.md
+++ b/docs/高程笔记/13.事件/13.事件.md
@@ -417,3 +417,61 @@ var isSupported =
   "onhaschange" in window &&
   (document.documentMode === undefined || document.documentMode > 7);
 ```
+
+### 设备事件
+
+#### orientationchange 事件
+
+这是一个 Safari 浏览器的专有事件。
+**触发条件**：横向查看模式和纵向查看模式相互转换时
+
+##### window.orientation
+
+该属性可能包含 3 个值：
+
+- 0 纵向查看
+- 90 左旋转的横向
+- -90 右旋转的横向
+
+##### 兼容性
+
+所有的 iOS 设备均支持该事件。
+
+#### MozOrientation 事件
+
+##### 触发条件
+
+检测到设备方向改变时触发
+
+##### 事件属性
+
+包括 3 个属性 x,y 和 z,跟别表示不同坐标上的方向。均处于-1~1 之间。
+
+##### 绑定到该事件的处理程序
+
+```javascript
+window.addEventListener('MozOrientation',function(event){
+	...
+})
+```
+
+##### 兼容性
+
+只有带加速针的设备才支持该属性。包括 MacBook，ThinkPad 和安卓设备等。
+
+#### deviceorientation 事件
+
+##### 触发条件
+
+同`MozOrientaion`事件一样，检测到设备方向改变时触发
+
+#### devicemotion 事件
+
+**触发条件**： 设备移动的时候
+
+##### 事件对象属性
+
+- `acceleration`包含 x,y,z 属性的对象，表示在不考虑重力时每个方向上的加速度
+- `accelerationIncludingGravity`: 包含 x,y,z 属性对象，表示在考虑重力时每个方向上的加速度
+- `interval` 以毫秒表示的时间值
+- `rotationRate` 一个包含表示方向的 alpha,beta 和 gamma 属性的对象
