触摸和手势事件

--- a/docs/高程笔记/13.事件/13.事件.md
+++ b/docs/高程笔记/13.事件/13.事件.md
@@ -475,3 +475,47 @@ window.addEventListener('MozOrientation',function(event){
 - `accelerationIncludingGravity`: 包含 x,y,z 属性对象，表示在考虑重力时每个方向上的加速度
 - `interval` 以毫秒表示的时间值
 - `rotationRate` 一个包含表示方向的 alpha,beta 和 gamma 属性的对象
+
+### 触摸和手势事件
+
+#### 触摸事件
+
+- `touchstart` 触摸屏幕时发生
+- `touchmove` 在屏幕上移动时发生
+- `touchend`从屏幕上移动时发生
+- `touchcancel` 当系统停止跟踪触摸时触发
+
+##### 触发条件
+
+手指触碰屏幕，在屏幕上移动和离开屏幕时
+
+##### 触摸对象属性
+
+- `screenX`和`screenY` 在屏幕中的坐标
+- `clientX`和`clientY` 在视口中的坐标
+- `pageX`和`pageY`在页面中的坐标
+- `target`触摸的 DOM 节点目标
+- `identifier` 触摸表示 id
+
+##### 事件对象属性
+
+- `touches` 表示当前触摸操作的 Touch 对象的数组
+- `targetTouches` 事件目标的 Touch 对象的数组
+- `changeTouches` 表示自动上次触摸以来放生了什么改变的 Touch 对象的数组
+
+#### 手势事件
+
+##### 条件
+
+两个手指触摸屏幕时触发
+
+##### 事件
+
+- `gesturestart`两个手指都放到屏幕上的一瞬间触发
+- `gesturechange`触摸屏幕的手指中任意一个位置改变
+- `gestureend`任意一根手指离开屏幕
+
+##### event 属性
+
+- `rotation` 手指变化引起的旋转角度，负值表示逆时针，正值表示顺时针
+- `scale` 手指间的距离，该值从 1 开始，距离加大则增大，距离缩小则减小
